[package]
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
description = "Tool to create a bootable OS image from a kernel binary."
license = "MIT/Apache-2.0"
name = "bootimage"
version = "0.6.6"
repository = "https://github.com/rust-osdev/bootimage"
edition = "2018"

[dependencies]
byteorder = "1.3.1"
rayon = "1.0"
toml = "0.5.0"
wait-timeout = "0.2"
xmas-elf = "0.6.2"
llvm-tools = "0.1.1"
locate-cargo-manifest = "0.1.0"

[dependencies.cargo_metadata]
version = "0.7.4"
default-features = false

[dependencies.failure]
version = "0.1.5"
default-features = false
features = ["std"]
