[package]
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
description = "Tool to create a bootable OS image from a kernel binary."
license = "MIT/Apache-2.0"
name = "bootimage"
version = "0.7.3"
repository = "https://github.com/rust-osdev/bootimage"
edition = "2018"

[dependencies]
rayon = "1.0"
toml = "0.5.0"
wait-timeout = "0.2"
llvm-tools = "0.1.1"
locate-cargo-manifest = "0.1.0"
json = "0.11.13"

[dependencies.cargo_metadata]
version = "0.7.4"
default-features = false
