[package]
name = "runner-fail-reboot"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.7"
x86_64 = "0.14.1"
rlibc = "1.0.0"

[package.metadata.bootimage]
test-success-exit-code = 0 # this will test for the reboot
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]
