[package]
name = "testing-serial-result"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.4"
x86_64 = "0.5.3"
spin = "0.4.9"
uart_16550 = "0.1.0"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "../x86_64-bootimage-example-kernels.json"
